--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="manifest.json" />
-    <title>서울시 노인복지관 찾기</title>
+    <title>노인복지관</title>
   </head>
   <body>
     <div id="root"></div>
