--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
       sizes="152x152"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
     <title>노인복지관</title>
   </head>
   <body>
