🐛 all/fix: manifest 오류 임시 수정

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,10 @@
       sizes="152x152"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="./manifest.json" />
+    <link
+      rel="manifest"
+      href="https://www.xn--zb0bt8fd6lsrkqxc.com/manifest.json"
+    />
     <title>노인복지관</title>
   </head>
   <body>
@@ -30,7 +33,7 @@
         // Register a service worker hosted at the root of the
         // site using the default scope.
         navigator.serviceWorker
-          .register("/sw.js")
+          .register("/assets/nested-b89ffa2c.js")
           .then((registration) => {
             console.log("Service worker registration succeeded:", registration);
           })
