--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -29,19 +29,19 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script>
-      if ("serviceWorker" in navigator) {
+      if ('serviceWorker' in navigator) {
         // Register a service worker hosted at the root of the
         // site using the default scope.
         navigator.serviceWorker
-          .register("/assets/nested-b89ffa2c.js")
-          .then((registration) => {
-            console.log("Service worker registration succeeded:", registration);
+          .register('/assets/nested-b89ffa2c.js')
+          .then(registration => {
+            console.log('Service worker registration succeeded:', registration);
           })
-          .catch((err) => {
-            console.log("Service worker registration failed:", error);
+          .catch(err => {
+            console.log('Service worker registration failed:', error);
           });
       } else {
-        console.log("Service workers are not supported.");
+        console.log('Service workers are not supported.');
       }
     </script>
   </body>
